# swift-java-coder

./: CMakeLists.txt  Package.swift
Sources/: JNICore+JavaCoder.swift  JavaCoderConfig.swift  JavaEncoder.swift
